--- a/Unit8_Pathway1_JuiceTracker_v2/app/src/main/res/navigation/nav_graph.xml
+++ b/Unit8_Pathway1_JuiceTracker_v2/app/src/main/res/navigation/nav_graph.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Định nghĩa các màn hình và luồng điều hướng trong ứng dụng Juice Tracker.
-  Gồm fragment chính (TrackerFragment) và dialog nhập liệu (EntryDialogFragment).
+  ~ Copyright (C) 2023 The Android Open Source Project
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~      https://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
 -->
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@id/trackerFragment">
-
     <fragment
         android:id="@+id/trackerFragment"
         android:name="com.example.juicetracker.TrackerFragment"
@@ -17,7 +27,6 @@
             android:id="@+id/action_trackerFragment_to_entryDialogFragment"
             app:destination="@id/entryDialogFragment" />
     </fragment>
-
     <dialog
         android:id="@+id/entryDialogFragment"
         android:name="com.example.juicetracker.EntryDialogFragment"
@@ -28,5 +37,4 @@
             app:argType="long"
             android:defaultValue="0L" />
     </dialog>
-
 </navigation>
